--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@google/maps": "^0.4.3",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "install": "^0.10.1",
     "morgan": "~1.8.1",
+    "npm": "^5.3.0",
     "pug": "~2.0.0-beta11",
+    "request": "^2.81.0",
     "serve-favicon": "~2.4.2"
   }
 }
