--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "install": "^0.10.1",
     "morgan": "~1.8.1",
     "npm": "^5.3.0",
+    "promise": "^8.0.1",
     "pug": "~2.0.0-beta11",
     "request": "^2.81.0",
     "serve-favicon": "~2.4.2"
